# movie-service/src/routes/create-favourite/types/path.type.ts
@@ -1,0 +1,3 @@
+import { MovieServiceOpenapi } from 'shared';
+
+export type PathType = keyof Pick<MovieServiceOpenapi.paths, '/api/movie-service/favourites'>;
