# movie-service/src/routes/create-favourite/types/request.type.ts
@@ -1,0 +1,4 @@
+import { MovieServiceOpenapi } from 'shared';
+
+export type RequestType =
+  MovieServiceOpenapi.paths['/api/movie-service/favourites']['post']['requestBody']['content']['application/json'];
