# movie-service/src/routes/create-favourite/types/response.type.ts
@@ -1,0 +1,4 @@
+import { MovieServiceOpenapi } from 'shared';
+
+export type ResponseType = Responses[keyof Responses]['content']['application/json'];
+type Responses = MovieServiceOpenapi.paths['/api/movie-service/favourites']['post']['responses'];
