# movie-service/src/routes/list-favourites/types/method.type.ts
@@ -1,0 +1,3 @@
+import { MovieServiceOpenapi } from 'shared';
+
+export type MethodType = keyof Pick<MovieServiceOpenapi.paths['/api/movie-service/favourites'], 'get'>;
