# movie-service/src/routes/search-movies/types/tmdb-movie-search-result-item.type.ts
@@ -5,10 +5,10 @@ export type TmdbMovieSearchResultItem = {
   readonly id: number;
   readonly original_language: string;
   readonly original_title: string;
-  readonly overview: string;
+  readonly overview?: string;
   readonly popularity: number;
   readonly poster_path: string;
-  readonly release_date: string;
+  readonly release_date?: string;
   readonly title: string;
   readonly video: boolean;
   readonly vote_average: number;
