# shared/src/openapi/movie-service.openapi.yaml
@@ -20,12 +20,52 @@ paths:
             type: string
       responses:
         200:
-          description: The created favourite movie.
+          description: Movies matching the search query
           content:
             application/json:
               schema:
                 type: object
                 $ref: '#/components/schemas/MovieServiceSearchMoviesResponseDto'
+        default:
+          description: Service Error
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/ServiceError'
+  /api/movie-service/favourites:
+    get:
+      responses:
+        200:
+          description: List of favourite movies
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/MovieServiceListFavouritesResponseDto'
+        default:
+          description: Service Error
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/ServiceError'
+    post:
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              $ref: '#/components/schemas/MovieServiceCreateFavouriteRequestDto'
+      responses:
+        201:
+          description: The created favourite movie
+          content:
+            application/json:
+              schema:
+                type: object
+                $ref: '#/components/schemas/MovieServiceCreateFavouriteResponseDto'
         default:
           description: Service Error
           content:
@@ -46,6 +86,85 @@ components:
       required:
         - message
         - requestStatus
+    MovieServiceCreateFavouriteRequestDto:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int32
+        overview:
+          type: string
+        releaseDate:
+          type: string
+        title:
+          type: string
+      required:
+        - id
+        - title
+    MovieServiceCreateFavouriteResponseDto:
+      type: object
+      properties:
+        requestStatus:
+          type: object
+          $ref: '#/components/schemas/RequestStatusSuccess'
+        favourite:
+          type: object
+          properties:
+            id:
+              type: string
+            movieId:
+              type: integer
+              format: int32
+            overview:
+              type: string
+            releaseDate:
+              type: string
+            title:
+              type: string
+            userId:
+              type: string
+          required:
+            - id
+            - movieId
+            - title
+            - userId
+      required:
+        - favourite
+        - requestStatus
+    MovieServiceListFavouritesResponseDto:
+      type: object
+      properties:
+        requestStatus:
+          type: object
+          $ref: '#/components/schemas/RequestStatusSuccess'
+        favourites:
+          type: array
+          items:
+            $ref: '#/components/schemas/MovieServiceListFavouritesResultItem'
+      required:
+        - favourites
+        - requestStatus
+    MovieServiceListFavouritesResultItem:
+      type: object
+      properties:
+        id:
+          type: string
+        movieId:
+          type: integer
+          format: int32
+        overview:
+          type: string
+        releaseDate:
+          type: string
+        title:
+          type: string
+        userId:
+          type: string
+      required:
+        - id
+        - movieId
+        - title
+        - userId
     MovieServiceSearchMoviesResponseDto:
       type: object
       properties:
@@ -73,8 +192,6 @@ components:
           type: string
       required:
         - id
-        - overview
-        - releaseDate
         - title
     RequestStatusFailure:
       type: string
